# oni-comb-rs

./: .clinerules  .cursorrules  .editorconfig  .gitignore  .gitmodules  .mcp.json  .tool-versions  AGENTS.md  API_SPEC.md  COMMON.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  PLAN.md  README.md  mise.toml  package-lock.json  package.json  progress.md  release.toml  renovate.json  run-benchmark.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.agent/: CC-SDD.md
.agents/: CC-SDD.md
.claude/: settings.json
.codex/: agents  config.toml
.codex-personal/: agents  config.toml  prompts  skills
.gemini/: settings.json
.github/: CODEOWNERS  create-release-note.py  dependabot.yml  next-semver.py  next_semver.py  semver-level.py
.kiro/: settings
.serena/: project.yml
.serena-home/: .gitignore
.takt/: .gitignore  config.yaml
benchmarks/: JSON_PLAN.md
crond/: Cargo.toml  README.md  release.toml
crond/src/: cron_environment.rs  cron_evaluator.rs  cron_expr.rs  cron_interval.rs  cron_interval_iterator.rs  cron_parser.rs  cron_schedule.rs  cron_specification.rs  crond_evaluator.rs  environment.rs  evaluator.rs  expr.rs  lib.rs  parsers.rs
docs/: benchmark_results.md  knowledge.md  parser_error_design_improvement.md  perf_optimization_plan.md  (+3 more)
hocon/: Cargo.toml  README.md
hocon/src/: lib.rs  model.rs  parsers.rs
hocon/src/model/: config_array_value.rs  config_duration_value.rs  config_include_value.rs  config_number_value.rs  config_object_value.rs  config_value.rs  config_value_link.rs  config_values.rs  time_unit.rs
hocon/tests/: config.rs
hocon/tests/data/: b_1.conf  bom.conf  test01.conf
parser/: Cargo.toml  README.md  release.toml
parser/benches/: bench_main.rs  compare.rs  json.rs  nom_json.rs  oni_comb_json.rs  oni_comb_json_optimized.rs  oni_comb_json_static.rs  pom_json.rs
parser/benches/data/: deep_nested.json  heavy.json  large_array.json  mixed_payload.json
parser/benches/data/fail/: missing_comma.json  unclosed_brace.json
parser/benches/json_impl/: mod.rs  nom.rs  oni_comb.rs  pom.rs
parser/doc/: api-list.md
parser/examples/: cache_benchmark.rs  calculator.rs  crond.rs  hello_world.rs  json_byte.rs  json_char.rs  toys.rs
parser/src/: core.rs  fail.rs  input.rs  internal.rs  lib.rs  lib_static.rs  parser.rs  parser_ext.rs  str_input.rs  utils.rs
parser/src/combinator/: attempt.rs  cut.rs  many.rs  map.rs  mod.rs  optional.rs  or.rs  then.rs
parser/src/core/: committed_status.rs  element.rs  mod.rs  parse_committed.rs  parse_cursor.rs  parse_error.rs  parse_result.rs  parse_state.rs  parsed_error.rs  parsed_result.rs  parser.rs  parser_filter.rs  parser_functor.rs  parser_monad.rs  parser_pure.rs  parser_runner.rs  parsers.rs  static_parser.rs
parser/src/extension/: parser.rs  parsers.rs
parser/src/extension/parser/: cache_parser.rs  discard_parser.rs  logging_parser.rs  operator_parser.rs  peek_parser.rs  repeat_parser.rs  skip_parser.rs
parser/src/extension/parsers/: cache_parsers.rs  collect_parsers.rs  conversion_parsers.rs  discard_parsers.rs  element_parsers.rs  elements_parsers.rs  filter_parsers.rs  lazy_parsers.rs  logging_parsers.rs  offset_parsers.rs  operator_parsers.rs  peek_parsers.rs  primitive_parsers.rs  repeat_parsers.rs  skip_parsers.rs  taken_parsers.rs
parser/src/internal/: mod.rs  parser_impl.rs  parsers_impl.rs  static_parser_impl.rs  static_parsers_impl.rs
parser/src/internal/parser_impl/: add_impl.rs  bitor_impl.rs  cache_parser_impl.rs  collect_parser_impl.rs  conversion_parser_impl.rs  discard_parser_impl.rs  logging_parser_impl.rs  mul_parser_impl.rs  not_impl.rs  offset_parser_impl.rs  operator_parser_impl.rs  parser_functor_impl.rs  parser_monad_impl.rs  parser_pure_impl.rs  parser_runner_impl.rs  peek_parser_impl.rs  repeat_parser_impl.rs  skip_parser_impl.rs  sub_parser_impl.rs
parser/src/internal/parsers_impl/: cache_parsers_impl.rs  collect_parsers_impl.rs  conversion_parsers_impl.rs  discard_parsers_impl.rs  element_parsers_impl.rs  elements_parsers_impl.rs  lazy_parsers_impl.rs  logging_parsers_impl.rs  offset_parsers_impl.rs  operator_parsers_impl.rs  peek_parsers_impl.rs  primitive_parsers_impl.rs  repeat_parsers_impl.rs  skip_parser_impl.rs  taken_parsers_impl.rs
parser/src/internal/static_parser_impl/: mod.rs  static_parser_add_impl.rs  static_parser_bitor_impl.rs  static_parser_cache_impl.rs  static_parser_collect_impl.rs  static_parser_conversion_impl.rs  static_parser_discard_impl.rs  static_parser_filter_impl.rs  static_parser_functor_impl.rs  static_parser_logging_impl.rs  static_parser_monad_impl.rs  static_parser_mul_impl.rs  static_parser_not_impl.rs  static_parser_offset_impl.rs  static_parser_operator_impl.rs  static_parser_peek_impl.rs  static_parser_pure_impl.rs  static_parser_repeat_impl.rs  static_parser_runner_impl.rs  static_parser_skip_impl.rs  static_parser_sub_impl.rs
parser/src/internal/static_parsers_impl/: elements_parsers_impl.rs  lazy_static_helper.rs  logging_parsers_impl.rs  mod.rs  primitive_parsers_impl.rs  repeat_parsers_impl.rs
parser/src/prelude/: mod.rs
parser/src/text/: char.rs  eof.rs  mod.rs  tag.rs
parser/src/utils/: set.rs
parser/tests/: choice.rs  combinators.rs  direct_static_parser_test.rs  failed_lazy_static_test.rs  json_nom.rs  primitives.rs  repeat.rs  sequence.rs  static_parser_test.rs  str_input.rs  surround_static_tes.rs  surround_static_test.rs
toys/: Cargo.toml  README.md  release.toml
toys/src/: environment.rs  expr.rs  interpreter.rs  labelled_parameter.rs  main.rs  operator.rs  parsers.rs  values.rs
uri/: Cargo.toml  README.md  release.toml
uri/src/: lib.rs  models.rs  parsers.rs
uri/src/models/: authority.rs  hier_part.rs  host_name.rs  path.rs  query.rs  scheme.rs  uri.rs  user_info.rs
uri/src/parsers/: authority_parsers.rs  basic_parsers.rs  fragment_parsers.rs  hier_part_parsers.rs  host.rs  host_parsers.rs  ip_v4_address_parsers.rs  ip_v6_address_parsers.rs  path_parsers.rs  port_parsers.rs  query_parsers.rs  scheme_parsers.rs  uri_parsers.rs  user_info_parsers.rs
(+342 files in other folders)
