[package]
name = "oni-comb-crond-rs"
version = "0.0.4"
edition = "2021"
description = "A Rust crate for CROND parser"
license = "MIT OR Apache-2.0"
keywords = ["parser", "crond"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oni-comb-parser-rs = { version = "0.0.*", path = "../parser" }
chrono = "0.4.22"

[dev-dependencies]
env_logger = "0.9.1"

