[package]
name = "oni-comb-hocon-rs"
version = "0.1.276"
edition = "2021"
description = "A Rust crate for HOCON parser"
license = "MIT OR Apache-2.0"
keywords = ["parser", "hocon"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oni-comb-parser-rs = { version = "0.0.*", path = "../parser" }
log = "0.4.20"
envy = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
chrono = "0.4.31"
anyhow = "1.0.75"

[dev-dependencies]
ctor = "0.2.6"
rand = "0.8.5"
env_logger = "0.10.1"
prop-check-rs = "0.0.423"
anyhow = "1.0.75"
serial_test = "2.0.0"
test-generator = "0.3"
