[package]
name = "oni-comb-hocon-rs"
version = "0.1.477"
edition = "2021"
description = "A Rust crate for HOCON parser"
license = "MIT OR Apache-2.0"
keywords = ["parser", "hocon"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oni-comb-parser-rs = { version = "0.0.*", path = "../parser" }
log = "0.4.21"
envy = "0.4.2"
rust_decimal = "1.35"
rust_decimal_macros = "1.34.2"
chrono = "0.4.38"
anyhow = "1.0.82"

[dev-dependencies]
ctor = "0.2.8"
rand = "0.8.5"
env_logger = "0.11.3"
prop-check-rs = "0.0.629"
anyhow = "1.0.82"
serial_test = "3.1.1"
test-generator = "0.3.1"
