[package]
name = "oni-comb-parser-rs"
version = "0.0.502"
edition = "2021"
description = "A Rust crate for parser combinators"
license = "MIT OR Apache-2.0"
keywords = [ "parser", "combinator" ]
categories = [ "parsing" ]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

[badges.github]
repository = "j5ik2o/oni-comb-rs"
workflow = "Rust"

[dependencies]
log = "0.4.21"
regex = "1.10.4"

[dev-dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
prop-check-rs = "0.0.642"
rust_decimal = "1.35.0"
chrono = "0.4.38"
pom = "3.4.0"
nom = "7.1.3"
criterion = { version = "0.5.1", features = [ "html_reports" ]}
ctor = "0.2.8"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench_main"
harness = false
