[package]
name = "oni-comb-parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rebooted parser combinator library"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
nom = "7"
pom = "3"
serde_json = "1"

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "json"
harness = false
