[package]
name = "oni-comb-toys-rs"
version = "0.0.2"
edition = "2021"
description = "A Rust crate for toys parser"
license = "MIT OR Apache-2.0"
keywords = ["parser", "toys"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oni-comb-parser-rs = { version = "0.0.*", path = "../parser" }

[dev-dependencies]
env_logger = "0.10.0"
ctor = "0.2.4"