[package]
name = "oni-comb-uri-rs"
version = "0.2.592"
edition = "2021"
description = "A Rust crate for uri parser"
license = "MIT OR Apache-2.0"
keywords = ["parser", "uri"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oni-comb-parser-rs = { version = "0.0.*", path = "../parser" }

[dev-dependencies]
log = "0.4.21"
env_logger = "0.11.3"
ctor = "0.2.8"
rand = "0.8.5"
prop-check-rs = "0.0.746"
anyhow = "1.0.82"
http = "1.1"
